@@ -95,4 +95,5 @@
       - Added: There is new possibility to post parcel via button in our packetery box in BO order detail
       - Updated: Widget HD library URL
       - Added: possibility to delete PDF labels via CRON and customize deletion results with GET params (file age/number of deleted files at once)
+      - Added: ID verification request for adult products upon delivery
       - Added: Packetery/Core API layer
